# earthrovers_ros

./: .gitignore  README.md
dockerfiles/base/: Dockerfile
dockerfiles/deployment/: Dockerfile
dockerfiles/desktop/: Dockerfile
dockerfiles/development/: Dockerfile
earthrovers_base/: README.md  package.xml  setup.cfg  setup.py
earthrovers_base/earthrovers_base/: base.py  conversions.py
earthrovers_bringup/: README.md  package.xml  setup.cfg  setup.py
earthrovers_bringup/launch/: rover_bringup_launch.py  rover_tf_launch.py
earthrovers_description/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
earthrovers_interfaces/: CMakeLists.txt  README.md  package.xml
earthrovers_interfaces/srv/: CheckpointReached.srv  EndMission.srv  GetCheckpoints.srv  GpsToUtm.srv  GpsToWorldFrame.srv  StartMission.srv  checkpoints_list.srv  start_mission.srv
earthrovers_navigation/: README.md  package.xml  setup.cfg  setup.py
earthrovers_navigation/earthrovers_navigation/: mission_controller.py  nav.py  waypoint_manager.py  waypoint_receiver.py
earthrovers_ros/: README.md  package.xml  setup.cfg  setup.py
earthrovers_ros/config/camera_calibration/: front_camera.yaml
earthrovers_ros/earthrovers_ros/: base.py  camera.py  control.py  conversions.py  mission_control.py  mission_services.py  mock_gps.py  nav.py  parsers.py  waypoint_receiver.py
earthrovers_ros/launch/: rover_bringup_launch.py
earthrovers_vision/: README.md  package.xml  setup.cfg  setup.py
earthrovers_viz/: README.md  package.xml  setup.cfg  setup.py
tmuxp_configs/: dev.yaml
(+3 files in other folders)
