<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>earthrovers_ros</name>
  <version>0.1.0</version>
  <description>ROS Wrapper for the FrodoBots Earth Rover SDK</description>
  <maintainer email="nlitz88@gmail.com">nlitz88</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
